<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.ascend.wangfeng.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Q.1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"/>

            <RadioGroup
                android:id="@+id/q1_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1_result_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a"/>

                <RadioButton
                    android:id="@+id/q1_result_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_b"/>

                <RadioButton
                    android:id="@+id/q1_result_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/q1_c"/>
            </RadioGroup>
        </LinearLayout>
        <!--Q.2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"/>

            <RadioGroup
                android:id="@+id/q2_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q2_result_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a"/>

                <RadioButton
                    android:id="@+id/q2_result_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_b"/>

                <RadioButton
                    android:id="@+id/q2_result_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_c"/>
            </RadioGroup>

        </LinearLayout>
        <!--Q.3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"/>

            <EditText
                android:id="@+id/q3_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/q3_hint"
                android:textSize="12sp"/>
        </LinearLayout>
        <!--Q.4-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"/>

            <CheckBox
                android:id="@+id/q4_result_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a"/>

            <CheckBox
                android:id="@+id/q4_result_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_b"/>

            <CheckBox
                android:id="@+id/q4_result_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_c"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"/>
    </LinearLayout>

</ScrollView>
